# LLMOps-Pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  template.py
data/: AI.txt
notebook/: experiment.ipynb
src/components/: data_ingestion.py
src/config/: config.yaml
src/exception/: exception.py
src/logger/: logger.py
