[project]
name = "llmops-pipeline"
version = "0.1.0"
description = "End-to-end LLMOps pipeline for model evaluation, monitoring, deployment, and experimentation."
readme = "README.md"
requires-python = ">=3.14"

authors = [
    { name = "Shubham" }
]

dependencies = [
    "langchain",
    "pandas",
    "numpy",
    "pydantic",
    "python-dotenv",

    "fastapi",
    "uvicorn",

    "ragas",
    "requests",
]